[gd_scene load_steps=4 format=3 uid="uid://c086jkowitao1"]

[ext_resource type="Script" path="res://entities/enemy/Enemy.gd" id="1_dwhrk"]
[ext_resource type="Texture2D" uid="uid://bmoii0n4mlefi" path="res://icon.svg" id="2_16h4b"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dm47a"]

[node name="Enemy" type="Node2D"]

[node name="RigidBody2D" type="RigidBody2D" parent="." groups=["enemy"]]
position = Vector2(1, 0)
lock_rotation = true
script = ExtResource("1_dwhrk")

[node name="Sprite2D" type="Sprite2D" parent="RigidBody2D"]
texture = ExtResource("2_16h4b")

[node name="WallRaycast" type="RayCast2D" parent="RigidBody2D"]
target_position = Vector2(94, -1)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="RigidBody2D"]
polygon = PackedVector2Array(64, -61.1, 64, 59, 59.6, 64, -60.2, 64, -64, 61, -64, 58, -64, -59, -59, -63.8, 59.2, -64)

[node name="Hitbox" type="Area2D" parent="RigidBody2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="RigidBody2D/Hitbox"]
scale = Vector2(4.51461, 4.26433)
shape = SubResource("RectangleShape2D_dm47a")

[node name="GroundRaycast" type="RayCast2D" parent="RigidBody2D"]
target_position = Vector2(0, 72)

[connection signal="body_entered" from="RigidBody2D/Hitbox" to="RigidBody2D" method="_on_hitbox_body_entered"]
